# hslua-examples

./: .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT  README.md  hslua-examples.cabal  stack.yaml
.github/workflows/: ci.yml
examples/callbacks/: callbacks.hs  output
examples/err_prop/: err_prop.hs  err_prop.lua  output
examples/haskellfun/: haskellfun.hs  haskellfun.lua  output
examples/lua-version/: lua-version.hs
examples/lualib_in_haskell/: LibArith.hs  Makefile  main.lua
examples/wishlist/: wishlist.hs
